--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 h1 {
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -31,6 +31,14 @@ body {
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px 2px;
+}
+
+.timer {
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
 }
 
 #instructions {
