--- a/style.css
+++ b/style.css
@@ -46,6 +46,16 @@ body {
     text-align: justify;
 }
 
+#initials {
+    border: 1px solid gray;
+    background-color: rgb(255, 210, 95);
+    border-radius: 5px;
+    padding: 5px 10px;
+    color: black;
+    outline: none;
+    font-size: 20px;
+}
+
 .btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
