--- a/style.css
+++ b/style.css
@@ -14,11 +14,10 @@ h1 {
 }
 
 body {
-    padding: 0;
+    padding: 120px;
     margin: 0;
     display: flex;
     width: 100vw;
-    height: 100vh;
     justify-content: center;
     align-items: center;
     font-size: 25px;
